--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Plantilla para Documentación
+site_name: Bitácora
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
